--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/eslint-parser": "^7.16.3",
     "@typescript-eslint/parser": "^6.6.0",
     "coveralls": "^3.1.1",
-    "eslint": "^8.4.0",
+    "eslint": "^9.7.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -36,7 +36,7 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "eslint": "^3.17.0 || ^4 || ^5 || ^6 || ^7 || ^8"
+    "eslint": "^3.17.0 || ^4 || ^5 || ^6 || ^7 || ^8 || ^9"
   },
   "keywords": [
     "eslint",
